syntax = "proto3";

option go_package = "/internal/pkg/genproto";

package protos;

import "muallimah-submodule/protos/common.proto";


service UserService {
    rpc CreateUser(UserCreateReq) returns (Void);
    rpc GetUserByID(ById) returns (UserGetRes);
    rpc GetUserByEmail(ByEmail) returns (UserGetRes);
    rpc UpdateUser(UserUpdateReq) returns (Void);
    rpc ChangeUserPassword(UserChangePasswordReq) returns (Void);
    rpc IsEmailExists(UserEmailCheckReq) returns (UserEmailCheckRes);
    // rpc ChangeUserEmail(UserEmailReq) returns (Void);
    rpc DeleteUser(ById) returns (Void);
    rpc ListUsers(UsersGetAllReq) returns (UsersGetAllRes);
}

message UserCreateReq {
    string first_name = 1;
    string last_name = 2;
    string dob = 3;
    string phone_number = 4;
    string email = 5;
    string occupation = 6;
    string address = 7;
    string password = 8;
    string gender = 9;
    string photo_url = 10;
    string role = 11;
}

message UserGetRes {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string dob = 4;
    string phone_number = 5;
    string email = 6;
    string occupation = 7;
    string address = 8;
    string gender = 9;
    string photo_url = 10;
}

message UserUpdate {
    string first_name = 1;
    string last_name = 2;
    string dob = 3;
    string phone_number = 4;
    string occupation = 5;
    string address = 6;
    string gender = 7;
    string photo_url = 8;
}

message UserUpdateReq {
    string id = 1;
    UserUpdate body = 2;
}

message UserChangePassword {
    string old_password = 1;
    string new_password = 2;
}

message UserChangePasswordReq {
    string user_id = 1;
    UserChangePassword body = 2;
}

message UserGetAllFilter {
    string first_name = 1;
    string last_name = 2;
    string dob_from = 3;
    string dob_to = 4;
    string phone_number = 5;
    string email = 6;
    string occupation = 7;
    string address = 8;
    string gender = 9;
}

message UsersGetAllReq {
    UserGetAllFilter body = 1;
    Pagination pagination = 2;
}

message UsersGetAllRes {
    repeated UserGetRes users = 1;
    Pagination pagination = 2;
}

message UserEmailCheckReq {
    string email = 1;
}

message UserEmailCheckRes {
    bool exists = 1;
}

message ByEmail {
    string email = 1;
}