syntax = "proto3";

option go_package = "/internal/pkg/genproto";

package protos;

import "muallimah-submodule/protos/common.proto";
import "muallimah-submodule/protos/users_course.proto";

service EvaluationService {
    rpc CreateEvaluation(EvaluationCreate) returns (Void);
    rpc GetEvaluation(ById) returns (EvaluationGet);
    rpc DeleteEvaluation(ById) returns (Void);
    rpc ListEvaluations(EvaluationFilter) returns (EvaluationList);
}
message EvaluationCreate {
    string UserCourseId = 1;
    int32  Score = 2;
    string Feedback = 3;
}
message EvaluationGet {
    string Id = 1;
    UserCourse UserCourseId = 2;
    int32 Score = 3;
    string Feedback = 4;
    string CreatedAt = 5;
}
message EvaluationFilter {
    string CourseId = 1;
    string UserId = 2;
    int32  ScoreFrom = 3;
    int32  ScoreTo = 4;
    Pagination Filter = 5;
}
message EvaluationList {
    repeated EvaluationGet Get = 1;
    Pagination Pagination = 2;
    int32 TotalCount = 3;
}
    